sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: not found: value ecart
  ecart=taille
  ^AlgCombSort:9: error: not found: value ecart
    if (ecart>1){
        ^AlgCombSort:10: error: not found: value ecart
      ecart=(ecart.asInstanceOf[Double]/1.3).asInstanceOf[Int]
      ^AlgCombSort:13: error: not found: value i
    i=0
    ^AlgCombSort:14: error: not found: value i
    while (i+ecart<taille){
           ^AlgCombSort:14: error: not found: value ecart
    while (i+ecart<taille){
             ^AlgCombSort:15: error: not found: value i
      if (plusPetit(i,i+ecart)==true){
                    ^AlgCombSort:15: error: not found: value i
      if (plusPetit(i,i+ecart)==true){
                      ^AlgCombSort:15: error: not found: value ecart
      if (plusPetit(i,i+ecart)==true){
                        ^AlgCombSort:16: error: not found: value i
        echange(i,i+ecart)
                ^AlgCombSort:16: error: not found: value i
        echange(i,i+ecart)
                  ^AlgCombSort:16: error: not found: value ecart
        echange(i,i+ecart)
                    ^AlgCombSort:19: error: not found: value i
    i=i+1
    ^