sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var taille=getNombreValeurs()
  var trier=false
  ecart=taille
  
  while (trier==false){
    trier=true
    if (ecart>1){
      ecart=(ecart.asInstanceOf[Double]/1.3).asInstanceOf[Int]
   
    }
    i=0
    while (i+ecart<taille){
      if (plusPetit(i,i+ecart)==true){
        echange(i,i+ecart)
        trier=false
      }
    i=i+1
    }
  }
  
}